# tunix

./: .gitignore  AGENTS.md  MARIN.md  marin_smoke.py  pyproject.toml
mega_eval/: DATA_PLAN.md  PYPROJECT_NOTES.md  README.md  agentic_collect_smoke.py  bench_weight_transfer.py  launch_eval.py  launch_rl.py  launch_sft.py  reshard_probe.py  rl_disagg_loop.py  rl_disagg_smoke.py  rl_rendezvous_smoke.py  rollout_workers_smoke.py  sandbox_smoke.py
mega_eval/agent_data/: agent_traces.py  mixtures.py
mega_eval/docker/: Dockerfile.agent-task
mega_eval/docs/: WEIGHT_TRANSFER_PERF.md
mega_eval/eval/: agent_loop.py  eval_smoke.py  grade.py  gvisor_smoke.py  model_serving.py  sandbox.py  tb_tasks.py
mega_eval/models/: checkpoint.py  checkpoint_staging.py  qwen3_loader.py  registry.py
mega_eval/rl/: __init__.py  agent.py  agentic_collect.py  chat_parser.py  disagg_common.py  disagg_train.py  environment.py  iris_coordinator.py  trajectory_channel.py
mega_eval/tests/: test_agent_loop.py  test_agent_sft_encode.py  test_chat_parser.py  test_rl_env.py  test_sandbox_exec.py  test_sandbox_mirror.py  test_sft_mixture.py
mega_eval/training/: agent_sft.py  common.py
ot_agent/: FINDINGS.md  README.md  __init__.py  _qwen3_chat_template.py  convert_hf_to_levanter.py  data.py  distributed.py  export_hf.py  launch_sft.py  levanter_sft.py  sft.py  submit_levanter_sft.sh  submit_sft.sh
ot_agent/tests/: __init__.py  _tiny_model.py  test_chunked_loss.py  test_data_sharding.py  test_export_inverse.py  test_export_roundtrip.py  test_gpu_flash_attention.py  test_low_mem_loss.py  test_optimizer.py  test_sft_loop.py
tests/rl/: rl_utils_test.py  weight_transfer_test.py
tests/rl/weight_transfer/: arrow_flight_test.py
tests/utils/: topology_test.py
tunix/models/: safetensors_loader.py
tunix/models/qwen3/: model.py
tunix/rl/: reshard.py  rl_cluster.py  utils.py  weight_transfer.py  weight_transfer_test.py
tunix/rl/rollout/: base_rollout.py  mock_rollout.py  rollout_engine_group.py  sglang_jax_rollout.py  vanilla_rollout.py  vllm_rollout.py
tunix/rl/weight_transfer/: __init__.py  arrow_flight.py  base.py  coordinator.py  local.py  nccl.py  state_dict.py
tunix/sft/: checkpoint_manager.py
tunix/utils/: env_utils.py  topology.py  topology_test.py
