[project]
name = "google-tunix"
version = "0.1.7"
authors = [
  { name = "Tunix Developers", email = "tunix-dev@google.com" },
]
description = "A lightweight JAX-native LLM post-training framework."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Apache-2.0" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "datasets",
  "flax>=0.12.5",
  "fsspec",  # notebook dependency
  "google-metrax>=0.2.3",
  "grain",
  "hf_transfer",  # Huggingface caching in CI
  "huggingface_hub",
  "importlib_resources",
  "jaxtyping",
  "jinja2",  # Huggingface chat template
  "kagglehub",
  "numba",
  "omegaconf", # CLI config
  "orbax-checkpoint>=0.12.0",
  "pillow",  # Image processing
  "pylatexenc",  # Eval result parsing
  "python-dotenv",  # Huggingface API key
  "perfetto",  # Perfetto trace writer for metrics export
  "qwix>=0.1.6",
  "sentencepiece",
  "safetensors<0.8", # higher versions breaks with jax >=0.9
  "sympy",  # Eval result parsing
  "tensorflow_datasets",
  "tqdm",
  "transformers!=4.57.2", # Issue: https://github.com/google/tunix/pull/795
  "tenacity",
]

[project.optional-dependencies]
docs = [
    "sphinx>=8.2.3",
    "sphinx-book-theme>=1.1.4",  # Older versions fail to pin pydata-sphinx-theme
    "sphinx-autodoc-typehints",
    "ipython>=8.8.0",  # 8.7.0 has ipython3 lexer error
    "myst-nb>=1.3.0",
    "matplotlib>=3.10.0",
    "sphinx-gallery>=0.19.0",
    "sphinx-collections>=0.0.1",
    "sphinx_contributors",
]
prod = [
  "jax[tpu]>=0.6.0,!=0.7.2", # Jax 0.7.2 has performance regression on OSS
]
# GPU (CUDA 13) extra for running tunix off-GCP on NVIDIA clusters (e.g. the
# CoreWeave H100 cluster cw-us-east-02a). Mutually exclusive with `prod`
# (jax[tpu]) — see [tool.uv] conflicts below. Minimal JAX+NCCL set: enough for
# the pure-JAX rollout path (vanilla/sglang_jax) and NCCL weight sync; torch /
# vLLM / flash-attn GPU deps are added later when the torch-vLLM-GPU path lands.
gpu = [
  "jax[cuda13]==0.10.0",
  "nvidia-cublas>=13.2.0.9; sys_platform == 'linux'",
  # Preserve the CoreWeave H100 all-to-all guard under CUDA 13.
  "nvidia-nccl-cu13>=2.28.3; sys_platform == 'linux'",
]
dev = [
  # Manully install vLLM & tpu-inferece, which depends on jax[tpu]==0.7.2
]
test = [
  "pytest",
  "pytest-xdist",
  "gcsfs",
  "chex",
]
cli = [
  "tensorflow",
]
# Model-track ("mega_eval") runtime deps for iris jobs: gcsfs so orbax can
# read/write gs:// checkpoints, wandb (import-gated on WANDB_PROJECT) for curves.
# Platform-agnostic; combine with the accelerator extra, e.g. `--extra prod
# --extra mega` (TPU) or `--extra gpu --extra mega` (GPU).
mega = [
  "gcsfs",
  "wandb",
  # Arrow Flight weight-transfer transport (tunix.rl.weight_transfer.arrow_flight)
  # and the mega_eval data-mixture streamer both use pyarrow; the PyPI wheel
  # ships the `pyarrow.flight` gRPC component we need.
  "pyarrow>=14.0.0",
  # Disaggregated RL runs the trainer/rollout as SEPARATE iris jobs and rendezvous
  # over the cluster-global iris endpoint registry (mega_eval.rl.iris_coordinator),
  # so the iris client must be importable IN-JOB (not just locally). Plain
  # marin-iris (no [controller]) suffices in-job: the endpoint registry RPCs the
  # iris controller via connectrpc; [controller]'s kubernetes client is only the
  # submit-side path for k8s-backed clusters.
  "marin-iris",
  "marin-fray",
]
# Levanter SFT track: drive Levanter directly (ot_agent/levanter_sft.py ->
# levanter.main.train_lm) for the OpenThoughts-Agent Qwen3 SFT, where Levanter's
# fused-CE GPU kernel + NVTE flash + sequence packing fit Qwen3 at seq 32768
# where our hand-rolled tunix path did not. marin-levanter[gpu] is a published
# PyPI nightly that pins jax[cuda13]==0.10.0 (same as our `gpu` extra) and pulls
# nvidia-nccl-cu13 + jax-triton + the Triton CE kernel. Launch GPU SFT jobs with
# `--extra gpu --extra levanter`. Mutually exclusive with `prod` (jax[tpu]).
levanter = [
  "marin-levanter[gpu]",
]

[project.urls]
Source = "https://github.com/google/tunix"

# Local-only dev tooling for driving the marin iris TPU cluster from this repo
# (submitting jobs with `uv run iris ...` and running the iris-dependent tests).
# These live in a PEP 735 dependency-group, NOT in [project.optional-dependencies],
# so they are NOT shipped in the published google-tunix wheel — they only affect
# the local uv-managed dev environment. Install with `uv sync --group iris`.
[dependency-groups]
iris = [
  # [controller] pulls the `kubernetes` client needed to reach k8s-backed
  # clusters (e.g. the CoreWeave GPU cluster `cw-us-east-02a`); the TPU `marin`
  # cluster works without it but the CW CloudK8sService raises without it.
  "marin-iris[controller]",   # the `iris` CLI + client (job submission, cluster ops)
  "marin-fray",   # shared cluster client utilities the iris CLI expects
]
# Convenience aggregate: editable tunix + its test deps + the iris tooling.
dev = [
  "marin-iris[controller]",
  "marin-fray",
  "pytest",
  "pytest-xdist",
  "gcsfs",
  "chex",
]

[tool.uv]
# marin-iris / marin-fray are published as nightly prereleases (0.2.x.dev*), so
# resolution must be allowed to pick prereleases.
prerelease = "allow"
# jax[tpu] (prod) and jax[cuda13] (gpu) ship incompatible jaxlib/PJRT plugins;
# declare them mutually exclusive so uv forks the lock and rejects installing
# both together. Submit TPU jobs with `--extra prod`, GPU jobs with `--extra gpu`.
conflicts = [
  [{ extra = "prod" }, { extra = "gpu" }],
  # marin-levanter[gpu] pins jax[cuda13]; incompatible with prod's jax[tpu].
  [{ extra = "prod" }, { extra = "levanter" }],
]
# google-tunix's pins and the marin nightly wheels disagree on a few transitive
# deps; these overrides make the combined resolution converge. Mirrors the
# marin-experiments configs that already run google-tunix + marin-iris together.
override-dependencies = [
  "omegaconf>=2.4.0.dev4",
  "antlr4-python3-runtime==4.11",
  "python-multipart>=0.0.22",
  "wheel>=0.46.2",
  "datasets>=3.1.0,<4.0.0",
  "equinox>=0.11.10",
  # tunix's orbax-checkpoint>=0.12.0 needs tensorstore>=0.1.84; marin-levanter
  # conservatively caps tensorstore<0.1.82. Lift the cap so both resolve in one
  # lock — Levanter's tensorstore usage (zarr3 caches/checkpoints) is exercised
  # by the levanter SFT smoke to confirm the newer tensorstore is compatible.
  "tensorstore>=0.1.84",
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tunix*"]

[tool.pyink]
line-length = 80
unstable = true
target-version = []
pyink-indentation = 2
pyink-use-majority-quotes = true
pyink-annotation-pragmas = [
  "noqa",
  "pylint:",
  "type: ignore",
  "pytype:",
  "mypy:",
  "pyright:",
  "pyre-",
  "@title",
  "@param",
  "@markdown",
  "@tidy",
  "@test",
]
pyink-ipynb-indentation = 2

[tool.isort]
profile = "google"       # or "black", etc.
known_third_party = ["tunix"]

[tool.pytest.ini_options]
pythonpath = ["."]
